--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <title>Quantum State to Column Vector</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
@@ -123,12 +125,13 @@
     <div id="circuitContainer" 
      style="width:100%; overflow-x:auto; white-space:nowrap; border:1px solid #ccc; padding:10px;">
 </div>
+<div id="qsphereDiv" style="width:600px;height:600px; overflow-x: auto;" ></div>
 <canvas id="histogram"></canvas>
 
 
   </div>
 
-  <script src="script2.js">
+  <script src="script.js">
   </script>
 </body>
 </html>
