--- a/index.html
+++ b/index.html
@@ -210,6 +210,26 @@
       letter-spacing: 0.2px;
     }
 
+    .sample-wavefunctions {
+      margin-top: 1rem;
+      padding: 1rem;
+      background: rgba(16, 185, 129, 0.07);
+      border-radius: 0.5rem;
+      border: 1px solid rgba(16, 185, 129, 0.2);
+    }
+
+    .sample-wavefunction {
+      cursor: pointer;
+      padding: 0.5rem;
+      margin: 0.25rem 0;
+      border-radius: 0.25rem;
+      transition: background-color 0.2s ease;
+    }
+
+    .sample-wavefunction:hover {
+      background: rgba(16, 185, 129, 0.15);
+    }
+
     @media (max-width: 768px) {
       .container {
         padding: 1rem;
@@ -291,27 +311,49 @@
       <label for="waveInput"><b>Wavefunction (Dirac notation):</b></label>
       <input id="waveInput" type="text" placeholder="e.g. (0.7)|0> + (0.7)|1>" class="form-input" />
 
-      <button id="convertBtn" class="btn-primary" style="margin-top:1rem;">Convert</button>
+      <div id="basisStatesList"
+        style="margin:1rem 0 0 0; padding:0.75rem; background:rgba(99,102,241,0.07); border-radius:0.5rem; font-size:1rem; color:#2563eb; overflow-x:auto;">
+        <!-- Populated by script.js -->
+      </div>
+      
+      <!-- Sample Wavefunctions with Zero Amplitudes -->
+      <div class="sample-wavefunctions">
+        <h4 style="margin-top:0; color:#059669;">Sample Wavefunctions (including zero amplitudes):</h4>
+        <div id="sampleWavefunctionsList">
+          <!-- Will be populated by JavaScript -->
+        </div>
+      </div>
     </div>
 
+    <button id="convertBtn" class="btn-primary" style="margin-top:1rem;">Convert</button>
+  </div>
+
+  <!-- Single Card for All Output Sections -->
+  <div class="container fade-in" style="margin-top:2rem;">
     <div class="card slide-up">
-      <h3>Column Vector:</h3>
-      <pre id="colVector" aria-live="polite"></pre>
-    </div>
-
-    <div id="errorMsg" class="error" aria-live="assertive" style="display: none;"></div>
-
-    <div class="card slide-up">
-      <h3>Backend Output:</h3>
-      <div class="backend-output" id="backendOutput">Waiting for backend...</div>
-    </div>
-
-    <div id="circuitContainer" class="card slide-up"></div>
-
-    <div id="qsphereDiv" class="card slide-up" style="width:92%; height:600px; overflow-x: auto;"></div>
-
-    <div class="card slide-up">
-      <canvas id="histogram"></canvas>
+      <div style="display: flex; flex-direction: column; gap: 1.5rem;">
+        <div>
+          <h3>Column Vector:</h3>
+          <pre id="colVector" aria-live="polite"></pre>
+        </div>
+        <div id="errorMsg" class="error" aria-live="assertive" style="display: none;"></div>
+        <div>
+          <h3>Backend Output:</h3>
+          <div class="backend-output" id="backendOutput">Waiting for backend...</div>
+        </div>
+        <div style="overflow-x:auto;">
+          <h3>Circuit Diagram:</h3>
+          <div id="circuitContainer" style="min-width:400px; width:100%;"></div>
+        </div>
+        <div>
+          <h3>QSphere:</h3>
+          <div id="qsphereDiv" style="width:92%; height:400px; overflow-x: auto;"></div>
+        </div>
+        <div>
+          <h3>Histogram:</h3>
+          <canvas id="histogram"></canvas>
+        </div>
+      </div>
     </div>
   </div>
 
